<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/timeSelection_title"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical"
        android:text="@string/timeSelectioin"
        android:textColor="#FFF000"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioGroup
            android:id="@+id/rgTimeSelection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="0.30" >

            <RadioButton
                android:id="@+id/rbTimeSelection0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time0min" />

            <RadioButton
                android:id="@+id/rbTimeSelection1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/time10min" />

            <RadioButton
                android:id="@+id/rbTimeSelection2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time20min" />

            <RadioButton
                android:id="@+id/rbTimeSelection3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/time30min" />

            <RadioButton
                android:id="@+id/rbTimeSelection4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time40min" />

            <RadioButton
                android:id="@+id/rbTimeSelection5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time50min" />

            <RadioButton
                android:id="@+id/rbTimeSelection6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time60min" />
        </RadioGroup>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_gravity="center_vertical"
            android:scaleType="centerInside"
            android:src="@drawable/selection" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSelectApps"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
                android:textColor="#FFF000"
        android:text="@string/appSelection" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
               android:layout_marginTop="35dp"
        android:text="@string/versions" />

</LinearLayout>